Reduce unnecessary download interruptions due to parallel requests

If a parallel request fails to when response starts, it will interrupt the download.
However, the failure may be recoverable by the main requst.
And this issue may cause a download to never finish even if user resumes it.
This change fixes the issue by allowing the failure to passthrough to DownloadFileImpl.
So that DownloadFileImpl can check whether the failure is recoverable.
A side effect of this change is more we will create received_slice vector even if all parallel requests fails.
This can be addressed in later changes.

BUG=720057

Review-Url: https://codereview.chromium.org/2872943003
Cr-Commit-Position: refs/heads/master@{#470994}

Former-commit-id: c41a4fc09f9356d7d225747454b707eccd745e54